# databricks-agent-quickstart

./: .env.example  .gitignore  01_setup_foundation.py  02_create_vs_index.py  03_agent.py  04_deploy_agent.py  04b_deploy_app.py  05_wrap_as_uc_tool.py  06_genie_setup.py  07_supervisor.py  08_evaluation.py  09_labeling_session.py  99_cleanup.py  CLAUDE.md  LICENSE  README.md  _config.py  hello.py  pyproject.toml  query_deployed_agent.py  run_local.py
chainlit-agent-app/: .env.example  .gitignore  README.md  app.py  app.yaml  auth.py  databricks.yml  pyproject.toml
chainlit-agent-app/.chainlit/: config.toml
chainlit-agent-app/backends/: __init__.py  base.py  endpoint.py  local_agent.py
chainlit-agent-app/services/: __init__.py  event_normalizer.py  renderer.py
data/: crawl_docs_simple.py  sample_docs.json
doc-agent-app/: .env.example  databricks.yml  local_server_stream.py  mlflow.db  pyproject.toml  start_server.py
doc-agent-app/agent_server/: agent.py  utils.py
experiments/: stream_supervisor_demo.py
experiments/memalign/: 01_memalign_validation.py
experiments/streaming/: README.md  direct_stream.py  exploration_notebook.py  raw_http_stream.py  react_stream.py  responses_api.py  streaming_comparison.py  with_tools.py
experiments/term_locator/: term_locator_walkthrough.py
